# DG-Chat

./: CLAUDE.md  README.en.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  deploy.yml
apps/tauri-android/: .gitignore  AndroidManifest.template.xml  README.md  index.html  package.json  signing.gradle.kts.template  tsconfig.json  vite.config.ts
apps/tauri-android/src/: android-shell.ts  connect-aux-tauri.ts  (+4 more)
apps/tauri-android/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/tauri-android/src-tauri/capabilities/: default.json
apps/tauri-android/src-tauri/icons/: icon.icns
apps/tauri-android/src-tauri/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src/components/: AiSettingsDialog.tsx  ChatPanel.tsx  ControlPanel.tsx  DeviceSafetyButton.tsx  LedColorPicker.tsx  Lobby.tsx  MarketImportDialog.tsx  MemberCard.tsx  MemberControl.tsx  OpossumControl.tsx  Popover.tsx  RoomEntry.tsx  SafetyNotice.tsx  SceneDialog.tsx  SceneMarketDialog.tsx  SensorCard.tsx  WaveformPanel.tsx
src/hooks/: use-device.ts  use-peer-room.ts  use-room-agents.ts  use-waveforms.ts
src/lib/: ai-config.ts  bluetooth.ts  commands.ts  device-session.test.ts  llm-client.ts  lobby-client.ts  market.ts  media.ts  protocol.test.ts  protocol.ts  room-transport.ts  waveforms.test.ts  waveforms.ts
src/styles/: app.css  tokens.css
src/types/: web-bluetooth.d.ts
worker/: index.ts  lobby-do.ts  media.ts  room-do.ts  wire.ts
(+3 files in other folders)
