[package]
name = "app"
version = "0.1.0"
description = "DG-Chat Tauri Android shell"
authors = ["0xNullAI"]
license = "MIT"
repository = "https://github.com/0xNullAI/DG-Chat"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
# Pinned to the multi-device fork (0xNullAI/tauri-plugin-blec-multi) instead
# of upstream crates.io — upstream tauri-plugin-blec only tracks a single
# BLE connection at a time. This MUST stay in lockstep with the JS side's
# @mnlphlp/plugin-blec dependency (see apps/tauri-android/package.json and
# @dg-kit/transport-tauri-blec's package.json), which points at the same
# fork via a git URL for the same reason: the JS bindings now pass an
# `address` parameter the upstream 0.4 Rust plugin doesn't understand.
# Interim measure until the fork is published to crates.io or upstreamed.
tauri-plugin-blec = { git = "https://github.com/0xNullAI/tauri-plugin-blec-multi.git", branch = "main" }
